<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/status_bar"/>
        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.github.drunlin.webappbox.widget.NestedScrollingWebView
                android:id="@+id/webview"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </android.support.v4.widget.SwipeRefreshLayout>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/bottom_sheet_horizontal_margin"
        android:layout_marginRight="@dimen/bottom_sheet_horizontal_margin"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
        style="@style/Widget.Design.BottomSheet.Modal">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_sheet_bottom_margin"
            app:cardCornerRadius="0dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">
                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/closeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_close_black_24dp"
                    android:background="?selectableItemBackgroundBorderless"/>
                <TextView
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/closeButton"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/location_prompt"
                    android:textAppearance="?textAppearanceListItem"/>
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/allowButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text"
                    android:layout_alignParentRight="true"
                    android:text="@string/allow"
                    android:textColor="@android:color/white"
                    app:backgroundTint="@color/colorAccent"/>
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/denyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text"
                    android:layout_toLeftOf="@id/allowButton"
                    android:text="@string/block"
                    android:textColor="@color/colorAccent"
                    app:backgroundTint="@color/colorAccent"
                    style="?borderlessButtonStyle"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </FrameLayout>
</android.support.design.widget.CoordinatorLayout>
